--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -36,7 +36,7 @@ $pale-blue: $janus-color-pale-blue;
 $pale-red: $janus-color-pale-red;
 
 $primary:       $blue !default;
-$secondary:     $gray-600 !default;
+$secondary:     $janus-color-secondary !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -60,8 +60,6 @@ $theme-colors: (
   "pale-blue": $pale-blue,
   "pale-red": $pale-red
 ) !default;
-
-$secondary:     $janus-color-secondary !default;
 
 // Options
 //
